# Tektronix_4404_Smalltalk

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  main_sdl.cpp
linux/: Makefile
src/: bitblt.cpp  bitblt.h  hal.h  interpreter.cpp  interpreter.h  objmemory.cpp  objmemory.h  oops.h  posixfilesystem.h  realwordmemory.h
tektronix/: standardImage
tektronix/conversion/: deltaT2.1.2ToT  deltaT2.1.2aTo  deltaT2.1.3ToT  structSOSPacka
tektronix/system/: standardSource
tektronix/system/initialization/: SystemWorkspac  black.form  block.form  borderform.for  curve.form  darkgray.form  erase.form  gray.form  in.form  installPelluci  lightgray.form  line.form  magnify.form  out.form  over.form  repeatcopy.for  reverse.form  select.form  singlecopy.for  specialborderf  togglegrids.fo  under.form  white.form  xgrid.form  ygrid.form
tektronix/textStyles/: PellucidaDefau  PellucidaSans-  PellucidaSerif  PellucidaTypew  XeroxDefault10  additionalFont  example.ws  pruneToPelluci
